Added some experimental anti-aliasing options.